Fixes for the main content and images and remove spacing

--- a/src/main_content.css
+++ b/src/main_content.css
@@ -35,6 +35,9 @@
   padding-top: 10px;
 }
 
+.main-carousel-img {
+  height: 300px;
+}
 
 @media only screen and (max-width: 600px) {
   .content-value {
